test/tests/stages/5_local_variables/valid/extra_credit/compound_divide.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(to_divide)
  =
  const int(8)
  ;
  identifier(to_divide)
  /=
  const int(4)
  ;
  return
  identifier(to_divide)
  ;
  }
