test/tests/stages/5_local_variables/invalid_parse/missing_semicolon.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(2)
  identifier(a)
  =
  identifier(a)
  +
  const int(4)
  ;
  return
  identifier(a)
  ;
  }
